Fix scrolling issue by changing body overflow from hidden to auto

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    overflow: hidden;
+    overflow: auto;
     height: 100vh;
     width: 100vw;
     position: relative;
